--- a/course.html
+++ b/course.html
@@ -81,12 +81,19 @@
 				<div class="mx-auto rounded mt-10 text-left">
 					<h4 class="mt-1 mb-6 font-gilroy-medium ">Ticket includes</h4>
 					<ul class="m-0 p-0 font-gilroy-regular">
-						<li class="mb-4 pl-6 list-reset text-sm bg-no-repeat" style="background-position:2px;background-image: url(https://static.mindvalley.com/public/assets/2018/07/y4z2_checkmark_green.svg)">Exclusive training with a stellar lineup of speakers</li>
-						<li class="mb-4 pl-6 list-reset text-sm bg-no-repeat" style="background-position:2px;background-image: url(https://static.mindvalley.com/public/assets/2018/07/y4z2_checkmark_green.svg)">Networking & Connecting</li>
-						<li class="mb-4 pl-6 list-reset text-sm bg-no-repeat" style="background-position:2px;background-image: url(https://static.mindvalley.com/public/assets/2018/07/y4z2_checkmark_green.svg)">Global curated community</li>
-						<li class="mb-4 pl-6 list-reset text-sm bg-no-repeat" style="background-position:2px;background-image: url(https://static.mindvalley.com/public/assets/2018/07/y4z2_checkmark_green.svg)">Socials & Private Parties</li>
-						<li class="mb-4 pl-6 list-reset text-sm bg-no-repeat" style="background-position:2px;background-image: url(https://static.mindvalley.com/public/assets/2018/07/y4z2_checkmark_green.svg)">Dinners & Excursions</li>
-						<li class="mb-4 pl-6 list-reset text-sm bg-no-repeat" style="background-position:2px;background-image: url(https://static.mindvalley.com/public/assets/2018/07/y4z2_checkmark_green.svg)">A-Fest pre-workshop events</li>
+						<li class="mb-4 pl-6 list-reset text-sm bg-no-repeat" style="background-position:2px;background-image: url(https://static.mindvalley.com/public/assets/2018/07/y4z2_checkmark_green.svg)">Four weeks of Web Development app building curriculum
+            </li>
+            <li class="mb-4 pl-6 list-reset text-sm bg-no-repeat" style="background-position:2px;background-image: url(https://static.mindvalley.com/public/assets/2018/07/y4z2_checkmark_green.svg)">Impact, Personal Evolution, and Lifestyle curriculum that teaches the mindset and love for programming
+            </li>
+						<li class="mb-4 pl-6 list-reset text-sm bg-no-repeat" style="background-position:2px;background-image: url(https://static.mindvalley.com/public/assets/2018/07/y4z2_checkmark_green.svg)">1-2 hour team sessions every week with a TA
+            </li>
+						<li class="mb-4 pl-6 list-reset text-sm bg-no-repeat" style="background-position:2px;background-image: url(https://static.mindvalley.com/public/assets/2018/07/y4z2_checkmark_green.svg)">Bug assistance within 24 hours; maximize conceptual understanding, minimize time spent on less important details
+            </li>
+						<li class="mb-4 pl-6 list-reset text-sm bg-no-repeat" style="background-position:2px;background-image: url(https://static.mindvalley.com/public/assets/2018/07/y4z2_checkmark_green.svg)">Access to private Slack group 
+            </li>
+						<li class="mb-4 pl-6 list-reset text-sm bg-no-repeat" style="background-position:2px;background-image: url(https://static.mindvalley.com/public/assets/2018/07/y4z2_checkmark_green.svg)">Access to growing alumni network of top tier students around the world 
+            </li>
+						
 					</ul>
 					<div class="flex border-t pt-4">
 						<div class="w-1/2 font-gilroy-bold">Standard Price starts at</div>
