more mv removal

--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
               <a class="rounded-lg border-white border border-solid pt-2 pb-4 md:pb-2 md:px-4 block text-black md:inline-block md:text-white item px-4"
                 href="https://home.mindvalley.com">Login</a>
             </nav>
-          </div>
+          </div>-->
         </div>
-      </div> -->
+      </div> 
 
       <div class="container mx-auto">
         <div class="mt-4 w-3/5 mx-auto py-12 text-center">
@@ -247,7 +247,7 @@
 
       <div class="md:flex wrap lg:my-6">
 
-        <a href="https://www.mindvalley.com/superbrain/" class="no-underline w-4/5 mx-auto my-6 flex items-end md:w-1/3 text-center md:mx-6 pb-8 md:pb-0 rounded md:h-128 h-96 bg-cover retina-bg relative md:shadow-lg"
+        <a href="" class="no-underline w-4/5 mx-auto my-6 flex items-end md:w-1/3 text-center md:mx-6 pb-8 md:pb-0 rounded md:h-128 h-96 bg-cover retina-bg relative md:shadow-lg"
           srcset="img/2day.jpg" style="background-image: url('img/2day.jpg')">
           <div class="w-full px-6 pb-6 text-left">
             <h4 class="text-white font-gilroy-bold md:text-2xl text-xl">2 Day Eye Opening Immersions</h4>
@@ -256,7 +256,7 @@
           </div>
         </a>
 
-        <a href="https://www.mindvalley.com/superbrain/" class="no-underline w-4/5 mx-auto my-6 flex items-end md:w-1/3 text-center md:mx-6 pb-8 md:pb-0 rounded md:h-128 h-96 bg-cover retina-bg relative md:shadow-lg"
+        <a href="" class="no-underline w-4/5 mx-auto my-6 flex items-end md:w-1/3 text-center md:mx-6 pb-8 md:pb-0 rounded md:h-128 h-96 bg-cover retina-bg relative md:shadow-lg"
         srcset="img/3week.png" style="background-image: url('img/3week.png')">
         <div class="w-full px-6 pb-6 text-left">
           <h4 class="text-white font-gilroy-bold md:text-2xl text-xl">3 Week Coworking Evolutions</h4>
@@ -265,7 +265,7 @@
         </div>
       </a>
 
-      <a href="https://www.mindvalley.com/superbrain/" class="no-underline w-4/5 mx-auto my-6 flex items-end md:w-1/3 text-center md:mx-6 pb-8 md:pb-0 rounded md:h-128 h-96 bg-cover retina-bg relative md:shadow-lg"
+      <a href="" class="no-underline w-4/5 mx-auto my-6 flex items-end md:w-1/3 text-center md:mx-6 pb-8 md:pb-0 rounded md:h-128 h-96 bg-cover retina-bg relative md:shadow-lg"
       srcset="img/1week.png" style="background-image: url('img/1week.png')">
       <div class="w-full px-6 pb-6 text-left">
           <h4 class="text-white font-gilroy-bold md:text-2xl text-xl">1 Week Bootcamp Intensives</h4>
@@ -383,15 +383,15 @@
         </div>
       </div>
 
-      <div class="grid md:flex flex-wrap flex-row-reverse py-6 md:py-12">
+      <div class="grid md:flex flex-wrap py-6  md:py-12  flex items-center">
         <div class="w-full md:w-1/2 ">
           <img src="" srcset="" class="w-full rounded">
         </div>
-        <div class="w-full md:w-1/2 flex items-center">
+        <div class="w-full md:w-1/2 md:pl-10">
           <div class="md:w-full pr-10">
             <h1 class="font-gilroy-bold text-2xl md:text-3xl mt-4 md:mt-8">Quinntin Ruiz</h1>
             <div class="font-gilroy-medium md:mt-6 text-lg text-md leading-normal text-grey-nav mt-4">
-              <p>After studying, teaching, and competing in Taekwondo for 12 years, Mason took a deep dive into Software Creation and Organizational Psychology, going on to do Software Development and Graphic Design work for Fortune 10 company McKesson and teach  Personal Evolution and Entrepreneurship at the Top Ranked University of North Carolina at Chapel Hill.  Mason is an expert at finding the most effective ways to learn, learning to embrace our emotions to find more effortless states of flow, and innovative Software Design. Mason is the Founding Visionary of Programmer. </p>
+              <p></p>
             </div>
           </div>
         </div>
@@ -426,7 +426,7 @@
 					</div>
         </div>
         
-<!-- uncomment for more
+<!-- uncomment for more, if use ones given will have proper formatting, if just copy one above it won't
 
 				<div class="w-full p-2 md:p-4">
 					<div class="rounded-md shadow-lg">
