--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <div class="w-full md:w-1/3 md:p-6 text-center md:pb-0 pb-12">
           <img src="img/lifestyle.png"  style="max-width: 26%"
           >
-          <h3 class="text-grey-dark font-gilroy-bold text-xl md:text-2xl mt-3">Heavenly Lifestyle</h3>
+          <h3 class="text-grey-dark font-gilroy-bold text-xl md:text-2xl mt-3">Amazing Lifestyle</h3>
           <p class="mt-3 font-opensans font-light leading-normal text-grey-dark">A paradise coworking space, the best and healthiest food you've ever had, 
           bonfires, singing circles, incredible wholesome parties which leave you rejuvenated in your power, and of course a Tribe to celebrate and work with 
           that inspires you every day to be your best self. Hero events are the times of your life where every moment is incredible for your mind, body, and 
