--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@ mixpanel.init("f190e0a3abb2f2ba2e9346cc30983571");</script>
 			<div class="w-full md:w-1/2 md:w-1/3 flex mansory flex-wrap flex-col items-start">
         <div class="w-full p-2 md:p-4">
 					<div class="rounded-md shadow-lg">
-						<div class="bg-cover w-full h-56 bg-center bg-no-repeat rounded-t retina-bg" src="img/jase.jpg" srcset="img/jase.jpg" style="background-image: url('img/2day.jpg');">
+						<div class="bg-cover w-full h-56 bg-center bg-no-repeat rounded-t retina-bg" src="img/jase.jpg" srcset="img/jase.jpg" style="background-image: url('img/jase.jpg');">
 						</div>
 						<div class="contents p-6">
 							<h1 class="font-gilroy-bold text-2xl">"I am now way more able to focus" </h1>
@@ -572,7 +572,7 @@ mixpanel.init("f190e0a3abb2f2ba2e9346cc30983571");</script>
 -->
 				<div class="w-full p-2 md:p-4">
 					<div class="rounded-md shadow-lg">
-						<div class="bg-cover w-full h-56 bg-center bg-no-repeat rounded-t retina-bg" src="img/sara.jpg" srcset="img/sara.jpg" style="background-image: url('');">
+						<div class="bg-cover w-full h-56 bg-center bg-no-repeat rounded-t retina-bg" src="img/sara.jpg" srcset="img/sara.jpg" style="background-image: url('img/sara.jpg');">
             
             </div>
 						<div class="contents p-6">
@@ -589,7 +589,7 @@ mixpanel.init("f190e0a3abb2f2ba2e9346cc30983571");</script>
 
 				<div class="w-full p-2 md:p-4">
 					<div class="rounded-md shadow-lg">
-						<div class="bg-cover w-full h-56 bg-center bg-no-repeat rounded-t retina-bg" src="img/kristian.jpg" srcset="img/kristian.jpg" style="background-image: url('');">
+						<div class="bg-cover w-full h-56 bg-center bg-no-repeat rounded-t retina-bg" src="img/kristian.jpg" srcset="img/kristian.jpg" style="background-image: url('img/kristian.jpg');">
 						</div>
 						<div class="contents p-6">
 								<h1 class="font-gilroy-bold text-2xl">"My life is really shifting into alignment"</h1>
@@ -605,7 +605,7 @@ mixpanel.init("f190e0a3abb2f2ba2e9346cc30983571");</script>
 
 				<div class="w-full p-2 md:p-4  hidden md:block">
 					<div class="rounded-md shadow-lg">
-						<div class="bg-cover w-full h-56 bg-center bg-no-repeat rounded-t retina-bg" src="img/caitlin.jpg" srcset="img/caitlin.jpg" style="background-image: url('');">
+						<div class="bg-cover w-full h-56 bg-center bg-no-repeat rounded-t retina-bg" src="img/caitlin.jpg" srcset="img/caitlin.jpg" style="background-image: url('img/caitlin.jpg');">
 						</div>
 						<div class="contents p-6">
 							<h1 class="font-gilroy-bold text-2xl">"How to not just meditate but drop deeply into meditation"</h1>
@@ -622,7 +622,7 @@ mixpanel.init("f190e0a3abb2f2ba2e9346cc30983571");</script>
 
 				<div class="w-full p-2 md:p-4  hidden md:block">
 					<div class="rounded-md shadow-lg">
-						<div class="bg-cover w-full h-56 bg-center bg-no-repeat rounded-t retina-bg" src="img/daniel_2.jpg" srcset="img/daniel_2.jpg" style="background-image: url('');">
+						<div class="bg-cover w-full h-56 bg-center bg-no-repeat rounded-t retina-bg" src="img/daniel_2.jpg" srcset="img/daniel_2.jpg" style="background-image: url('img/daniel_2.jpg');">
 						</div>
 						<div class="contents p-6">
 							<h1 class="font-gilroy-bold text-2xl">"a unique and unparalleled experience"</h1>
@@ -635,7 +635,7 @@ mixpanel.init("f190e0a3abb2f2ba2e9346cc30983571");</script>
 
 				<div class="w-full p-2 md:p-4  hidden md:block">
 					<div class="rounded-md shadow-lg">
-						<div class="bg-cover w-full h-56 bg-center bg-no-repeat rounded-t retina-bg" src="img/patrick.jpg" srcset="img/patrick.jpg" style="background-image: url('');">
+						<div class="bg-cover w-full h-56 bg-center bg-no-repeat rounded-t retina-bg" src="img/patrick.jpg" srcset="img/patrick.jpg" style="background-image: url('img/patrick.jpg');">
 						</div>
 						<div class="contents p-6">
 							<h1 class="font-gilroy-bold text-2xl">"It taught me a much deeper understanding of how to relate to people."</h1>
