--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ mixpanel.init("f190e0a3abb2f2ba2e9346cc30983571");</script>
         <div class="w-full md:w-1/3 md:p-6 text-center md:pb-0 pb-12">
           <img src="img/lifestyle.png"  style="max-width: 50%"
           >
-          <h3 class="text-grey-dark font-gilroy-bold text-xl md:text-2xl mt-3">Life Your Fullest Life</h3>
+          <h3 class="text-grey-dark font-gilroy-bold text-xl md:text-2xl mt-3">Live Your Fullest Life</h3>
           <p class="mt-3 font-opensans font-light leading-normal text-grey-dark">It's not just about working all day to change the world and going home. Being a Hero means experiencing the full celebration of life yourself because those are the moments that inspire you to be your best self and those communities are where you interact with the people you are lifting up. Learn how fun can be productive by seeing how every activity from eating to dancing and more are moments to apply your meditation and step into your fullest self.
         </p>
         </div>
