--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hero: Purposeful Life Program</title>
-<meta name="title" content="Hero's Life Program" />
+<title>Hero: Heroic Life Program</title>
+<meta name="title" content="Heroic Life Program" />
 <meta property="url" content="https://afest.com/packages/" />
 <!-- <meta property="og:url" content="https://afest.com/packages/" /> -->
 <meta name="image" content="img/main.jpg" />
