--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ mixpanel.init("f190e0a3abb2f2ba2e9346cc30983571");</script>
 								<p>Sustainable design, products that help us live well, community+transformational work which empowers us to be our fullest selves. These are the products that are starting to rise.
 							<br><br>
 								</p>
-								<p>Hero is a community of conscious entrepreneurship which is building these products, lifting each other up, and bringing each other and our world into the new paradigm.
+								<p>Hero is a community of conscious entrepreneurs who are building these products, lifting each other up, and bringing each other and our world into the new paradigm.
 									<br><br>
 								</p>
 								<p>Join Hero and live the most amazing, purposeful life you can imagine.
@@ -199,7 +199,7 @@ mixpanel.init("f190e0a3abb2f2ba2e9346cc30983571");</script>
           <img src="img/impact.png"  style="max-width: 50%" ;
  >
           <h3 class="text-grey-dark font-gilroy-bold text-xl md:text-2xl mt-3">Co-Create Projects in Paradise</h3>
-          <p class="mt-3 font-opensans font-light leading-normal text-grey-dark">Hero teaches everything you need to create a conscious business, from heart-centered marketing, sales, and product creation training to mentorship and lifetime access to community to partner and share support with.
+          <p class="mt-3 font-opensans font-light leading-normal text-grey-dark">Hero teaches everything you need to create a conscious business, from heart-centered marketing, sales, and product creation training to mentorship and lifetime access to a community to partner and share support with.
 
 
 
@@ -208,7 +208,7 @@ mixpanel.init("f190e0a3abb2f2ba2e9346cc30983571");</script>
         <div class="w-full md:w-1/3 md:p-6 text-center md:mb-0 mb-8">
           <img src="img/evolution.png"  style="max-width: 50%"
           >
-          <h3 class="text-grey-dark font-gilroy-bold text-xl md:text-2xl mt-3">Experience Concsious Living</h3>
+          <h3 class="text-grey-dark font-gilroy-bold text-xl md:text-2xl mt-3">Experience Conscious Living</h3>
           <p class="mt-3 font-opensans font-light leading-normal text-grey-dark">What if everything we did, from the way we eat to the way we party and the way we work out was designed to optimize our emotions? Experience the cutting edge of personal growth and rewire your emotions for success using evidence based strategies.
 
 
@@ -218,7 +218,7 @@ mixpanel.init("f190e0a3abb2f2ba2e9346cc30983571");</script>
           <img src="img/lifestyle.png"  style="max-width: 50%"
           >
           <h3 class="text-grey-dark font-gilroy-bold text-xl md:text-2xl mt-3">Achieve Financial Freedom</h3>
-          <p class="mt-3 font-opensans font-light leading-normal text-grey-dark">Through becoming affiliates of each other's products that make you $100s in commissions to knowing the best part time digital nomad jobs that make $20-$30 an hour part time, gain the ability to work on your own terms.
+          <p class="mt-3 font-opensans font-light leading-normal text-grey-dark">Make money to live on your own terms even before launching your business by becoming affiliates of each other's products and by knowing the best part time digital nomad jobs that make $20-$30 an hour part time.
 
         </p>
         </div>
@@ -248,7 +248,7 @@ mixpanel.init("f190e0a3abb2f2ba2e9346cc30983571");</script>
 						<h2 class="font-gilroy-medium text-lg md:text-2xl mt-2 mb-4">One of the Conscious Capitals of Earth
 						</h2>
 						<div class="font-gilroy-medium md:mt-6 text-lg text-md leading-normal text-grey-nav">
-							<p>Home to a conscious digital nomad community of world renowned yoga schools, health restaurants, and rich with paradise beaches, Koh Phangan is the ideal place to create a business.</p><br><p>
+							<p>Home to a conscious digital nomad community of world renowned yoga schools and health restaurants, rich with paradise beaches, and featuring the world's first beach front coworking space, Koh Phangan is the ideal place to create a business.</p><br><p>
 
 								At Hero we like to use the term Holistic Intensity. We have experienced first hand the stress of doing an entrepreneurship program in the heart of hectic cities like San Francisco which easily lead to burnout. 
 
@@ -449,8 +449,8 @@ mixpanel.init("f190e0a3abb2f2ba2e9346cc30983571");</script>
 style="background-image: url('img/philanthropy.png')">
 
 <div class="container mx-auto py-12 w-full md:w-2/2 leading-normal">
-  <h2 class="text-white text-2xl md:text-4xl font-gilroy-bold md:mt-8 text-center md:pt-0 pt-12">1% Revenue goes to philanthropy <br> 10% of students are given scholarships <br> 100% of Hero's operations are devoted to creating a better world. </h2>
-  <p class="text-white text-xl font-gilroy-regular leading-normal mt-8 text-center">1% of Hero International's revenue is given and continuously circulated through <a href="https://www.kiva.org/" style="color: white">Kiva</a>, which gives micro loans to entrepreneurs in poor countries to start their businesses. Not only that, in order to promote diversity in our cohorts, 10% of students are given scholarships to ensure that the Heroic Lifestyle is truly for everyone. Hero is here for one reason only: to create a better world.</p>
+  <h2 class="text-white text-2xl md:text-4xl font-gilroy-bold md:mt-8 text-center md:pt-0 pt-12">1% Revenue goes to philanthropy <br> 20% of students are given scholarships <br> 100% of Hero's operations are devoted to creating a better world. </h2>
+  <p class="text-white text-xl font-gilroy-regular leading-normal mt-8 text-center">1% of Hero International's revenue is given and continuously circulated through <a href="https://www.kiva.org/" style="color: white">Kiva</a>, which gives micro loans to entrepreneurs in poor countries to start their businesses. Not only that, in order to promote diversity in our cohorts, 10% of students are given scholarships to bring people from developing countries into a world they would perhaps never even know about otherwise. Hero is here for one reason only: to create a better world.</p>
   <div class="text-center pb-10">
     <!-- <a target="blank" href="" class="mv-button-blue text-center mx-auto mt-10 md:mb-4">That's Awesome.</a> -->
   </div>
