--- a/online.html
+++ b/online.html
@@ -142,13 +142,13 @@ mixpanel.init("f190e0a3abb2f2ba2e9346cc30983571");</script>
 						<img class="main-logo" src="img/herologofull.png"  alt="">
 					<!-- </div> -->
 					<!-- <h1 class="text-white font-gilroy-bold text-4xl lg:text-5xl mt-8">Hero</h1> -->
-						<h1 class="example text-white font-gilroy-bold text-4xl lg:text-5xl mt-8 anglecia" style="font-size:44px; margin-top: 0px"> The Online Accellerator May 7th-June 4th<br>
+						<h1 class="example text-white font-gilroy-bold text-4xl lg:text-5xl mt-8 anglecia" style="font-size:44px; margin-top: 0px"> The Online Accellerator June 10th-July 7th<br>
 							
 							
 						</h1>
 						<br>
 						<br>
-						<h3 class="ambition text-white font-gilroy-medium text-xl mt-3"style="font-size:22px">Be one of the people who changes the world and join a community of conscious entrepreneurs who are doing the same
+						<h3 class="ambition text-white font-gilroy-medium text-xl mt-3"style="font-size:22px">Hero is a community of conscious entrepreneurs around the world who are stepping into themselves as the Heroes who are not only creating abundance for themselves, but using their power to bring heaven to earth
 	
 	
 						</h3>
@@ -220,8 +220,8 @@ mixpanel.init("f190e0a3abb2f2ba2e9346cc30983571");</script>
         <div class="w-full md:w-1/3 md:p-6 text-center md:pb-0 pb-12">
           <img src="img/lifestyle.png"  style="max-width: 50%"
           >
-          <h3 class="text-grey-dark font-gilroy-bold text-xl md:text-2xl mt-3">Achieve Financial Freedom</h3>
-          <p class="mt-3 font-opensans font-light leading-normal text-grey-dark">Make money to live on your own terms even before launching your business by becoming affiliates of each other's products and by knowing the best part time digital nomad jobs that make $20-$30 an hour part time.
+					<h3 class="text-grey-dark font-gilroy-bold text-xl md:text-2xl mt-3">Generate Abundance</h3>
+          <p class="mt-3 font-opensans font-light leading-normal text-grey-dark">In Hero it's not how much the program costs, it's how much  it costs not to do the program. We teach you not only how to quickly generate abundance in your business but to work with the other Heroes to do the same for each other.
         </p>
         </div>
       </div>
