--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ mixpanel.init("f190e0a3abb2f2ba2e9346cc30983571");</script>
 						<img class="main-logo" src="img/herologofull.png"  alt="">
 					<!-- </div> -->
 					<!-- <h1 class="text-white font-gilroy-bold text-4xl lg:text-5xl mt-8">Hero</h1> -->
-						<h1 class="example text-white font-gilroy-bold text-4xl lg:text-5xl mt-8 anglecia" style="font-size:44px; margin-top: 0px"> Manifest Money, Change the World
+						<h1 class="example text-white font-gilroy-bold text-4xl lg:text-5xl mt-8 anglecia" style="font-size:44px; margin-top: 0px"> Manifest Abundance, Change the World
 <br>
 							
 							
