campus as homepage

--- a/campus.html
+++ b/campus.html
@@ -232,7 +232,7 @@ mixpanel.init("f190e0a3abb2f2ba2e9346cc30983571");</script>
 			<div class="w-full md:w-1/2 text-center py-2">
 				<div class="">
 					<div class="bg-blue h-80 rounded w-full bg-cover bg-retina" srcset="img/kohphangan3.jpg"
-					" style="background-image:url(img/kohphangan3.jpg")></div>
+					style="background-image:url(img/kohphangan3.jpg)"></div>
 					<div class="hidden md:flex mt-6 -mx-4">
 						<div class="w-1/2 h-80 rounded bg-blue mx-4 bg-cover bg-retina" srcset="img/beachub.jpg" style="background-image:url(img/beachub.jpg);"></div>
 						<div class="w-1/2 h-80 rounded bg-blue mx-4 bg-cover bg-retina" srcset="img/beachubair.jpg" style="background-image:url(img/beachubair.jpg
